--- a/app/views/pigs/show.html.erb
+++ b/app/views/pigs/show.html.erb
@@ -3,3 +3,8 @@
 <% else %>
   no pig
 <% end %>
+
+<div id="audios">
+  <%= audio_tag("booo.mp3", id: "booo-sound") %>
+  <%= audio_tag("teere.mp3", id: "teere-sound") %>
+</div>
